<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!--Used Linear Layout because this layout is so simple and has flat hierarchy -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@android:color/background_light"
        android:orientation="vertical"
        android:gravity="center"
        tools:context=".screens.WelcomeFragment">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoe_store_text"
            android:layout_marginBottom="48dp"
            style="@style/title_text_style" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="32dp"
            android:gravity="center"
            android:text="@string/welcome_text"
            android:textSize="30sp"
            />

        <Button
            android:id="@+id/proceed_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instruction_button_text"
            style="@style/button_style" />

    </LinearLayout>
</layout>