<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!--Thouch this layout is quite simple used Constraint layout here to avoid nesting of layouts-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.LoginFragment">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/username_label_text"
            app:layout_constraintBottom_toTopOf="@+id/userNameText"
            app:layout_constraintStart_toStartOf="@+id/userNameText"
            style="@style/form_text_style"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/password_label_text"
            app:layout_constraintBottom_toTopOf="@+id/pwdText"
            app:layout_constraintStart_toStartOf="@+id/userNameText"
            style="@style/form_text_style"/>

        <EditText
            android:id="@+id/userNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/form_editText_style"/>

        <EditText
            android:id="@+id/pwdText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:inputType="textPassword"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/newUserLogin"
            app:layout_constraintStart_toStartOf="@+id/userNameText"
            style="@style/form_editText_style"/>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_text"
            app:layout_constraintStart_toStartOf="@+id/userNameText"
            app:layout_constraintTop_toTopOf="@+id/newUserLogin"
            style="@style/button_style" />

        <Button
            android:id="@+id/newUserLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/new_user_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/loginButton"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.633"
            style="@style/button_style" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>